--- a/public/login/index.html
+++ b/public/login/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="/public/style/loginStyle.css" />
+  <link rel="stylesheet" type="text/css" href="/public/login/loginStyle.css" />
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <title>LOGIN</title>
 </head>
@@ -29,6 +29,6 @@
       <button>SIGNUP</button>
     </form>
   </section>
-  <script src="/public/js/loginDom.js" type="text/javascript"></script>
+  <script src="/public/login/loginDom.js" type="text/javascript"></script>
 </body>
 
