--- a/public/signup/index.html
+++ b/public/signup/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="/public/style/signupStyle.css" />
+  <link rel="stylesheet" type="text/css" href="/public/signup/signupStyle.css" />
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <title>SIGNUP</title>
 </head>
@@ -35,5 +35,5 @@
      
     </form>
   </section>
-  <script src="/public/js/loginDom.js" type="text/javascript"></script>
+  <script src="/public/signup/signupDom.js" type="text/javascript"></script>
 </body>
