--- a/public/home/home.html
+++ b/public/home/home.html
@@ -76,7 +76,7 @@
     <footer></footer>
 
 <script src="/public/alertifyjs/alertify.min.js"></script>
-<script src="/public/js/fetch.js"></script>
+<script src="/public/scripts/fetch.js"></script>
 <!-- <script src="/public/home/home.js"></script> -->
 
 </body>
