--- a/public/login/login.html
+++ b/public/login/login.html
@@ -29,6 +29,8 @@
       <button>SIGNUP</button>
     </form>
   </section>
+    <script src="/public/scripts/fetch.js" type="text/javascript"></script>
+
   <script src="/public/login/loginDom.js" type="text/javascript"></script>
 </body>
 
