--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -35,5 +35,7 @@
      
     </form>
   </section>
+  <script src="/public/scripts/fetch.js" type="text/javascript"></script>
+
   <script src="/public/signup/signupDom.js" type="text/javascript"></script>
 </body>
