--- a/public/login/login.html
+++ b/public/login/login.html
@@ -24,7 +24,7 @@
  
 
     
-      <button>Submit</button>
+      <button id = "loginSubmit">Submit</button>
       
       <button>SIGNUP</button>
     </form>
