--- a/public/home.html
+++ b/public/home.html
@@ -27,7 +27,7 @@
       </label>
 
       <label for="email">Email:
-        <input id="name" type="email" required/>
+        <input id="email" type="email" required/>
       </label>
 
     
@@ -35,6 +35,6 @@
      
     </form>
   </section>
-  <script src="/public/js/loginDom.js" type="text/javascript"></script>
+  <script src="/public/js/signupDom.js" type="text/javascript"></script>
 </body>
 
