--- a/public/login/login.html
+++ b/public/login/login.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="/public/style/loginStyle.css" />
+  <link rel="stylesheet" type="text/css" href="/public/login/loginStyle.css" />
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <title>LOGIN</title>
 </head>
@@ -24,11 +24,13 @@
  
 
     
-      <button>Submit</button>
+      <button id = "loginSubmit">Submit</button>
       
       <button>SIGNUP</button>
     </form>
   </section>
-  <script src="/public/js/loginDom.js" type="text/javascript"></script>
+    <script src="/public/scripts/fetch.js" type="text/javascript"></script>
+
+  <script src="/public/login/loginDom.js" type="text/javascript"></script>
 </body>
 
