--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="/public/style/signupStyle.css" />
+  <link rel="stylesheet" type="text/css" href="/public/signup/signupStyle.css" />
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <title>SIGNUP</title>
 </head>
@@ -27,7 +27,7 @@
       </label>
 
       <label for="email">Email:
-        <input id="name" type="email" required/>
+        <input id="email" type="email" required/>
       </label>
 
     
@@ -35,5 +35,7 @@
      
     </form>
   </section>
-  <script src="/public/js/loginDom.js" type="text/javascript"></script>
+  <script src="/public/scripts/fetch.js" type="text/javascript"></script>
+
+  <script src="/public/signup/signupDom.js" type="text/javascript"></script>
 </body>
