--- a/public/login/login.html
+++ b/public/login/login.html
@@ -13,9 +13,8 @@
   <section class="signup">
     <h1>LOGIN PAGE</h1>
 
-    <form class="signup__form" novalidate>
       <label for="email">Email:
-        <input id="name" type="email" required/>
+        <input id="email" type="email" required/>
       </label>
 
       <label for="password">Password:
@@ -27,7 +26,6 @@
       <button id = "loginSubmit">Submit</button>
       
       <button>SIGNUP</button>
-    </form>
   </section>
     <script src="/public/scripts/fetch.js" type="text/javascript"></script>
 
