--- a/public/login/login.html
+++ b/public/login/login.html
@@ -27,6 +27,8 @@
       
       <button id="signup">SIGNUP</button>
   </section>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     <script src="/public/scripts/fetch.js" type="text/javascript"></script>
 
   <script src="/public/login/loginDom.js" type="text/javascript"></script>
