--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -35,6 +35,7 @@
      
     </form>
   </section>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <script src="/public/scripts/fetch.js" type="text/javascript"></script>
 
   <script src="/public/signup/signupDom.js" type="text/javascript"></script>
