--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -13,7 +13,6 @@
   <section class="signup">
     <h1>Sign up</h1>
 
-    <form class="signup__form" novalidate>
       <label for="name">Name:
         <input id="name" type="text" required/>
       </label>
@@ -21,19 +20,22 @@
       <label for="password">Password:
         <input id="password" type="password" required/>
       </label>
+      <p id="passwordErr" class="error"></p>
 
      <label for="confirmPassword">Confirm password:
      <input id="confirmPassword" type="password" required/>
       </label>
+      <p id="confirmErr" class="error"></p>
 
       <label for="email">Email:
         <input id="email" type="email" required/>
       </label>
+      <p id="emailErr" class="error"></p>
 
     
-      <button>Submit</button>
+      <button id = "submit">Submit</button>
+      <button id ="signin">Login</button>
      
-    </form>
   </section>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <script src="/public/scripts/fetch.js" type="text/javascript"></script>
