login and signup style

--- a/public/login/login.html
+++ b/public/login/login.html
@@ -6,6 +6,8 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="/public/login/loginStyle.css" />
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
+
   <title>LOGIN</title>
 </head>
 
@@ -13,19 +15,15 @@
   <section class="signup">
     <h1>LOGIN PAGE</h1>
 
-      <label for="email">Email:
-        <input id="email" type="email" required/>
-      </label>
+        <input id="email" type="email" required placeholder="Email"/>
 
-      <label for="password">Password:
-        <input id="password" type="password" required/>
-      </label>
+        <input id="password" type="password" required placeholder="password"/>
  
 
     
-      <button id = "loginSubmit">Submit</button>
+      <button id = "loginSubmit">Login</button>
       
-      <button id="signup">SIGNUP</button>
+      <button id="signup">Signup</button>
   </section>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
