--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -13,29 +12,21 @@
   <section class="signup">
     <h1>Sign up</h1>
 
-      <label for="name">Name:
-        <input id="name" type="text" required/>
-      </label>
-   
-      <label for="password">Password:
-        <input id="password" type="password" required/>
-      </label>
-      <p id="passwordErr" class="error"></p>
+    <input id="name" type="text" placeholder="Name" required/>
+    <p id="name" class="error"></p>
 
-     <label for="confirmPassword">Confirm password:
-     <input id="confirmPassword" type="password" required/>
-      </label>
-      <p id="confirmErr" class="error"></p>
+    <input id="password" type="password" placeholder="password" required/>
+    <p id="passwordErr" class="error"></p>
+    <input id="confirmPassword" type="password" placeholder="confirm Password"required/>
+    <p id="confirmErr" class="error"></p>
 
-      <label for="email">Email:
-        <input id="email" type="email" required/>
-      </label>
-      <p id="emailErr" class="error"></p>
+    <input id="email" type="email" placeholder="Email" required/>
+    <p id="emailErr" class="error"></p>
 
-    
-      <button id = "submit">Submit</button>
-      <button id ="signin">Login</button>
-     
+
+    <button id="submit">Signup</button>
+    <button id="signin">Login</button>
+
   </section>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <script src="/public/scripts/fetch.js" type="text/javascript"></script>
