login and signup style

--- a/public/home/home.html
+++ b/public/home/home.html
@@ -52,7 +52,7 @@
         </div>
     </main>
     <footer></footer>
-
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="/public/alertifyjs/alertify.min.js"></script>
 <script src="/public/scripts/fetch.js"></script>
 <script src="/public/home/home.js"></script>
