--- a/public/login/login.html
+++ b/public/login/login.html
@@ -14,7 +14,12 @@
   <section class="signup">
     <h1>LOGIN PAGE</h1>
     <input id="email" type="email" required placeholder="Email" />
+    <p id="emailErr" class="error"></p>
+
+
     <input id="password" type="password" required placeholder="password" />
+    <p id="passwordErr" class="error"></p>
+
     <button id="loginSubmit">Login</button>
     <button id="signup">Signup</button>
   </section>
