--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="/public/signup/signupStyle.css" />
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
   <title>SIGNUP</title>
 </head>
 
 <body>
   <section class="signup">
-    <h1>Sign up</h1>
+    <h1>Signup Page</h1>
 
     <input id="name" type="text" placeholder="Name" required/>
     <p id="name" class="error"></p>
